01-namespace.yaml
#Namespace its a isolated project space in k8's to create your workloads
apiVersion: v1
kind: Namespace
metadata: 
  name: roboshop
  labels:
    project: roboshop
    environment: dev
