07-env.yaml
#Env variables are used as a dyamic varibale where we can use it to configure the app without chnaging the code
# To store secrets and config Maps so that we no need to modify the code

apiVersion: v1
kind: Pod
metadata:
  name: envar-demo
  labels:
    purpose: demonstrate-envars
spec:
  containers:
  - name: nginx
    image: nginx
