14-service-lb.yaml
# Service - Load Balancer is also used to communicate but it will creates a loadbalancing and add all the worker nodes
# to the Target groups and route the tarffic as per the load
# This cloud loadblanecr works only in cloud enviornments

apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
  labels:
    purpose: service-lb-demo
spec:
  type: LoadBalancer
  selector:
    purpose: service-lb-demo
    project: roboshop
    environment: dev
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-lb
  labels:
    purpose: service-lb-demo
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx
