16-deployment.yaml
# Deployment is used to deploy the latest changes along with newer verison changes when the version changes
# But in replicaset it will not update the version 
# Thats why we go for deployment so that it will create newer pod with new version 
# replicaset also creates newly with unique names

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  # deployment labels
  labels:
    purpose: deployment-demo
    project: roboshop
    app: nginx
spec:
  replicas: 2
  # These are the labels replica set use to create pod replicas, this should match pod labels
  selector:
    matchLabels:
      purpose: deployment-demo
      project: roboshop
      app: nginx
  # This is pod definition
  template:
    metadata:
      labels:
        purpose: deployment-demo
        project: roboshop
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    purpose: service-demo
spec:
  selector:
    purpose: deployment-demo
    project: roboshop
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port
