20-network-policy.yaml
# NetworkPolicy works like a Kubernetes-level firewall (similar to Security Groups).
# This policy restricts traffic so that ONLY the catalogue pod can talk to MongoDB.
# No other pods in the namespace can connect to MongoDB once this policy is applied.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-accept-catalogue
  namespace: roboshop
spec:
  podSelector:
    matchLabels:
      tier: database  #These are mongodb pods
      component: mongodb
  policyTypes:
  - Ingress #We only controlling ingress traffic to mongodb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: catalogue  #Traffic coming from catalogue only should allow to mongodb
          project: roboshop
          tier: app
    ports:
    - protocol: TCP
      port: 27017
